tests/test_data/invalid_semantics/invalid_declarations/redefine_var_as_function.c
int main(void)
{
  int foo = 1;
  int foo(void);
  return foo;
}

int foo(void)
{
  return 1;
}
